# pymeu

./: .gitignore  LICENSE  README.md  compatibility.md  pyproject.toml  setup.py
docs/: me_firmware.md
docs/me/: application.md  compatibility.md  compression.md  firmware.md  transfer.md
examples/: 00_get_terminal_info.py  01_download_simple.py  02_download_kwargs.py  04_upload_simple.py  05_upload_kwargs.py  98_experimental_firmware_flash_pvp7b.py  99_experimental_firmware_flash_pvp6.py
examples/cfutility/: 99_experimental_firmware_flash_pvp7b.py
examples/meutility/: 00_get_terminal_info.py  01_download_simple.py  02_download_args.py  02_download_kwargs.py  03_download_multiple.py  04_upload_simple.py  05_upload_args.py  06_upload_progress.py  50_get_running_app_shortcuts.py  51_unlock_mer.py  52_unlock_apa.py  53_get_running_app_recipes.py  90_create_firmware_card.py  98_experimental_firmware_flash_pvp5.py  99_experimental_firmware_flash_pvp6.py
pymetransfer/: __init__.py  actions.py  constants.py  main.py  messages.py  terminal.py  types.py
pymeu/: __init__.py  actions.py  cfutility.py  comms.py  constants.py  dmk.py  fup.py  main.py  messages.py  meutility.py  terminal.py  types.py  validation.py
pymeu/cf/: __init__.py  dmk.py  messages.py  types.py  validation.py
pymeu/common/: __init__.py  messages.py  types.py  (+1 more)
tests/: TestA.mer  TestC.mer  cfutility_test.py  common_test.py  comms_test.py  config.json  config.py  firmware_test.py  main_test.py  meutility_test.py  pvp5_test.py  pvp6_test.py  pymetransfer_test.py  pymeu_test.py  terminal_test.py
(+31 files in other folders)
