[project]
name = "pymeu"
description = "Python ME Utility"
version = "0.1.5"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "aawilliams85", email = "adair.williams85@gmail.com" }
]
dependencies = [
    "pycomm3"
]

[project.urls]
Repository = "https://github.com/aawilliams85/pymeu.git"