[project]
name = "pymeu"
description = "Python ME Utility"
version = "0.4.2"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "aawilliams85", email = "adair.williams85@gmail.com" }
]
dependencies = [
    "olefile>=0.47"
]

[project.optional-dependencies]
pycomm3 = ["pycomm3>=1.2.14"]
pylogix = ["pylogix>=1.0.7"]

[project.urls]
Repository = "https://github.com/aawilliams85/pymeu.git"
